--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,26 @@
-
+contourpy==1.2.0
+cycler==0.12.1
+Cython==3.0.8
+imbalanced-learn==0.11.0
+imblearn
+ipykernel==6.26.0
+ipython==8.17.2
+matplotlib==3.8.1
+networkx==3.2.1
+numba==0.58.1
+numpy==1.26.1
+Pillow==10.1.0
+plotly==5.22.0
+ruptures==1.1.9
+scikit-learn==1.3.2
+scipy==1.11.3
+seaborn==0.13.0
+sentence-transformers==3.3.1
+six==1.16.0
+sklearn
+tokenizers==0.20.3
+torch==2.1.0
+torchvision==0.16.0
+tqdm==4.66.1
+transformers==4.46.3
+tslearn==0.6.3
